# rans_diplom

./: .gitignore  CMakeLists.txt  README.md  decoder.cpp  diff.cpp  example.cpp  main.cpp  main_copy.cpp  result  runner.sh  smain.cpp
pgm/: pgm.cpp  pgm.h
rANS/: rANS.cpp  rANS.h  rans_byte.h
